# the-cooler-streak-saver

./: Cargo.toml  README.md  db.sqlite  start-chrome-driver.sh
migrations/2022-04-17-105041_tables/: up.sql
src/: common.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/webdriver/: get_state.rs  mod.rs  questions.rs  signin.rs
