[package]
name = "the-cooler-streak-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.28"
dotenv = "0.15"
tracing = "0.1.34"
thiserror = "1.0"
diesel_migrations = "1.4"

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["32-column-tables"]

[features]
default = ["sqlite"]

mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
